# BatchFetch

./: .gitignore  fetch.py  get_keyword.py  pyproject.toml  readme.md  requirements.txt
core/: csv_builder.py  html_reader.py  text_extract.py
core/apis/: __init__.py  config.py.temp  semrush.py  serpstat.py
