[tool.poetry]
name = "BatchFetch"
version = "0.1.0"
description = ""
authors = ["Ian Zimmerman <orange@tinct.co>"]
readme = "readme.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
click = "^8.1.3"
newspaper3k = "^0.2.8"
nltk = "^3.7"
pydantic = "^1.10.2"
requests = "^2.28.1"
textstat = "^0.7.3"
urllib3 = "^1.26.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"